--- a/src/main/java/com/tonikelope/megabasterd/MainPanelView.form
+++ b/src/main/java/com/tonikelope/megabasterd/MainPanelView.form
@@ -382,10 +382,11 @@
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="status_down_label" max="32767" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
                       <Component id="close_all_finished_down_button" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                   </Group>
                   <Component id="jScrollPane_down" alignment="0" max="32767" attributes="0"/>
                   <Component id="down_remtime_label" alignment="0" max="32767" attributes="0"/>
@@ -559,8 +560,11 @@
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="status_up_label" max="32767" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="3" max="-2" attributes="0"/>
                       <Component id="close_all_finished_up_button" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="copy_all_uploads" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                   </Group>
                   <Component id="jScrollPane_up" alignment="0" max="32767" attributes="0"/>
                   <Component id="up_remtime_label" alignment="0" max="32767" attributes="0"/>
@@ -572,7 +576,10 @@
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="close_all_finished_up_button" alignment="0" max="32767" attributes="0"/>
+                          <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+                              <Component id="close_all_finished_up_button" alignment="3" max="32767" attributes="0"/>
+                              <Component id="copy_all_uploads" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
                           <Component id="status_up_label" alignment="0" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
@@ -672,6 +679,20 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JProgressBar" name="upload_status_bar">
+            </Component>
+            <Component class="javax.swing.JButton" name="copy_all_uploads">
+              <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Dialog" size="16" style="1"/>
+                </Property>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/images/icons8-copy-to-clipboard-30.png"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="COPY ALL UPLOAD LINKS"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="copy_all_uploadsActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
